--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   "author": "Joseph Akhenda",
   "license": "ISC",
   "scripts": {
+    "start": "babel-node -- index",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
   }
 }
