--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "scripts": {
     "start": "nodemon --exec babel-node -- index",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "export NODE_PATH=./ && mocha --compilers js:babel-register --recursive ./__tests__",
     "lint": "eslint index.js src/**/*.js __tests__/**/*.js",
     "validate": "npm run lint && npm run test"
   },
@@ -23,9 +23,11 @@
     "babel-eslint": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.1.2",
     "eslint": "^4.18.2",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
+    "mocha": "^5.0.4",
     "nodemon": "^1.17.1"
   }
 }
