--- a/.eslintrc
+++ b/.eslintrc
@@ -33,5 +33,10 @@
     "react/forbid-prop-types": 0,
     "react/jsx-indent": 0,
     "import/named": 2
+  },
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
+    }
   }
 }
