--- a/package.json
+++ b/package.json
@@ -33,6 +33,16 @@
     "eslint-plugin-import": "^2.9.0",
     "husky": "^0.14.3",
     "mocha": "^5.0.4",
-    "nodemon": "^1.17.1"
+    "nodemon": "^1.17.1",
+    "should": "^7.1.0",
+    "supertest": "^1.0.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "compression": "^1.7.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "method-override": "^2.3.10",
+    "morgan": "^1.9.0"
   }
 }
