--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "scripts": {
     "start": "nodemon --exec babel-node -- index",
-    "test": "export NODE_PATH=./ && mocha --compilers js:babel-register --recursive ./__tests__",
+    "test": "export NODE_PATH=./ && mocha --require __tests__/setup.js --compilers js:babel-register --recursive ./__tests__ --timeout 120000 --exit",
     "lint": "eslint index.js src/**/*.js __tests__/**/*.js",
     "validate": "npm run lint && npm run test",
     "precommit": "npm run validate",
@@ -27,12 +27,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^4.18.2",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-plugin-import": "^2.9.0",
     "husky": "^0.14.3",
     "mocha": "^5.0.4",
+    "mockgoose": "^7.3.5",
     "nodemon": "^1.17.1",
     "should": "^7.1.0",
     "supertest": "^1.0.0"
@@ -41,8 +43,11 @@
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "method-override": "^2.3.10",
+    "mongoose": "^5.0.9",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0"
   }
 }
