--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "scripts": {
     "start": "nodemon --exec babel-node -- index",
-    "test": "export NODE_PATH=./ && mocha --require __tests__/setup.js --compilers js:babel-register --recursive ./__tests__ --timeout 120000 --exit",
+    "test": "export NODE_PATH=./ && nyc --reporter=html mocha --require __tests__/setup.js --compilers js:babel-register --recursive ./__tests__ --timeout 120000 --exit",
     "lint": "eslint index.js src/**/*.js __tests__/**/*.js",
     "validate": "npm run lint && npm run test",
     "precommit": "npm run validate",
@@ -33,9 +33,11 @@
     "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-plugin-import": "^2.9.0",
     "husky": "^0.14.3",
+    "istanbul": "^0.4.5",
     "mocha": "^5.0.4",
     "mockgoose": "^7.3.5",
     "nodemon": "^1.17.1",
+    "nyc": "^11.4.1",
     "should": "^7.1.0",
     "supertest": "^1.0.0"
   },
